--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,4 @@
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+
 @import "compass/reset";
