--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,12 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 
-@import "compass/reset";
+h1{
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 150px;
+	color: #2C3C2D;
+	font-weight: 500;
+
+}
