--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,5 +8,22 @@ h1{
 	font-size: 150px;
 	color: #2C3C2D;
 	font-weight: 500;
+}
 
+.table{
+	text-align: left;
+}
+
+.price{
+	text-align: right;
+}
+
+a{
+	color: black;
+	text-decoration: none;
+}
+
+.page-size{
+	text-align: right;
+	margin-right: 300px;
 }
