--- a/public/templates/table.html
+++ b/public/templates/table.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="product-table">
   <tr ng-repeat="product in vm.products">
     <td><img ng-src="{{vm.getLink(product.image)}}"></td>
     <td>
@@ -7,9 +7,9 @@
       {{product.volume}}
     </td>
     <td class="price">
-    {{product.price}}
+      {{product.price}}
     <br/>
-    You Save: {{product.savedPrice}}
+      Save: {{product.savedPrice}}
     </td>
   </tr>
 </table>
