--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,29 +1,38 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 
-h1{
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 150px;
-	color: #2C3C2D;
-	font-weight: 500;
+h1 {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 150px;
+  color: #2C3C2D;
+  font-weight: 500;
 }
 
-.table{
-	text-align: left;
+a {
+  color: black;
+  text-decoration: none;
 }
 
-.price{
-	text-align: right;
+.product-table {
+  margin: auto;
+  text-align: left;
+
+  .price {
+    text-align: right;
+  }
 }
 
-a{
-	color: black;
-	text-decoration: none;
-}
 
-.page-size{
-	text-align: right;
-	margin-right: 300px;
+.page-controls {
+  text-align: right;
+  .page-size,.page-navigation,.page-buttons {
+    text-align: left;
+    display: inline-block;
+  }
+
+  .page-size {
+    
+  }
 }
