Refactor product table, update paging

--- a/public/templates/product-table.html
+++ b/public/templates/product-table.html
@@ -1,6 +1,8 @@
 <table class="product-table">
-  <tr ng-repeat="product in vm.products">
-    <td><img ng-src="{{vm.getLink(product.image)}}"></td>
+  <tr ng-repeat="product in vm.products track by $index">
+    <td>
+      <img ng-src="{{vm.getLink(product.image)}}">
+    </td>
     <td>
       <a ng-href="{{vm.getLink(product.link)}}" target="_blank"><h3>{{ product.name }}</h3></a>
       <br/>
@@ -8,7 +10,7 @@
     </td>
     <td class="price">
       {{product.price}}
-    <br/>
+      <br/>
       Save: {{product.savedPrice}}
     </td>
   </tr>
