--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,37 +1,65 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 /* line 4, ../../sass/style.scss */
-h1 {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 150px;
-  color: #2C3C2D;
-  font-weight: 500;
-}
-
-/* line 13, ../../sass/style.scss */
 a {
   color: black;
   text-decoration: none;
 }
 
-/* line 18, ../../sass/style.scss */
+/* line 9, ../../sass/style.scss */
+.header {
+  background-color: #8BC34A;
+}
+/* line 12, ../../sass/style.scss */
+.header h1 {
+  text-align: center;
+  margin: 0 auto;
+  font-size: 150px;
+  color: #2C3C2D;
+  font-weight: 500;
+}
+
+/* line 21, ../../sass/style.scss */
+.products {
+  width: 100%;
+  margin: auto;
+  padding-top: 20px;
+}
+
+/* line 28, ../../sass/style.scss */
+.page-controls md-toolbar {
+  background-color: transparent;
+}
+/* line 31, ../../sass/style.scss */
+.page-controls md-toolbar .md-toolbar-tools {
+  padding: 0;
+}
+/* line 36, ../../sass/style.scss */
+.page-controls .page-size, .page-controls .page-navigation, .page-controls .page-buttons {
+  text-align: left;
+  display: inline-block;
+}
+/* line 42, ../../sass/style.scss */
+.page-controls .page-size md-input-container {
+  margin-top: 14px;
+}
+/* line 46, ../../sass/style.scss */
+.page-controls .page-size label {
+  position: relative;
+  top: 1px;
+}
+/* line 52, ../../sass/style.scss */
+.page-controls .page-navigation {
+  min-width: 120px;
+  text-align: right;
+}
+
+/* line 58, ../../sass/style.scss */
 .product-table {
   margin: auto;
   text-align: left;
 }
-/* line 22, ../../sass/style.scss */
+/* line 62, ../../sass/style.scss */
 .product-table .price {
   text-align: right;
-}
-
-/* line 28, ../../sass/style.scss */
-.page-controls {
-  text-align: right;
-}
-/* line 30, ../../sass/style.scss */
-.page-controls .page-size, .page-controls .page-navigation, .page-controls .page-buttons {
-  text-align: left;
-  display: inline-block;
 }
