--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,65 +1,114 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
-/* line 4, ../../sass/style.scss */
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700);
+@import url(https://fonts.googleapis.com/css?family=Arvo:400,700);
+@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans+SC);
+/* line 6, ../../sass/style.scss */
+.splash {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  position: fixed;
+}
+/* line 12, ../../sass/style.scss */
+.splash .splash-container {
+  position: relative;
+  transform: translateY(-50%);
+  top: 50%;
+  height: 70px;
+}
+/* line 19, ../../sass/style.scss */
+.splash .splash-text {
+  color: white;
+  width: 100%;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 100;
+}
+/* line 27, ../../sass/style.scss */
+.splash .splash-progress {
+  margin: auto;
+}
+
+/* line 32, ../../sass/style.scss */
+.content {
+  display: none;
+}
+
+/* line 36, ../../sass/style.scss */
 a {
   color: black;
   text-decoration: none;
 }
 
-/* line 9, ../../sass/style.scss */
+/* line 41, ../../sass/style.scss */
 .header {
   background-color: #8BC34A;
 }
-/* line 12, ../../sass/style.scss */
-.header h1 {
+/* line 44, ../../sass/style.scss */
+.header h1, .header h2 {
   text-align: center;
   margin: 0 auto;
-  font-size: 150px;
+}
+/* line 49, ../../sass/style.scss */
+.header h1 {
+  font-family: 'Alegreya Sans SC', sans-serif;
+  font-size: 128px;
   color: #2C3C2D;
-  font-weight: 500;
+  font-weight: 400;
+}
+/* line 56, ../../sass/style.scss */
+.header h2 {
+  font-family: 'Arvo', serif;
+  font-size: 32px;
+  color: #425943;
+  font-weight: 300;
 }
 
-/* line 21, ../../sass/style.scss */
+/* line 64, ../../sass/style.scss */
 .products {
   width: 100%;
   margin: auto;
   padding-top: 20px;
 }
 
-/* line 28, ../../sass/style.scss */
+/* line 71, ../../sass/style.scss */
 .page-controls md-toolbar {
   background-color: transparent;
 }
-/* line 31, ../../sass/style.scss */
+/* line 74, ../../sass/style.scss */
 .page-controls md-toolbar .md-toolbar-tools {
   padding: 0;
 }
-/* line 36, ../../sass/style.scss */
+/* line 79, ../../sass/style.scss */
 .page-controls .page-size, .page-controls .page-navigation, .page-controls .page-buttons {
   text-align: left;
   display: inline-block;
 }
-/* line 42, ../../sass/style.scss */
+/* line 85, ../../sass/style.scss */
 .page-controls .page-size md-input-container {
   margin-top: 14px;
 }
-/* line 46, ../../sass/style.scss */
+/* line 89, ../../sass/style.scss */
 .page-controls .page-size label {
   position: relative;
   top: 1px;
 }
-/* line 52, ../../sass/style.scss */
+/* line 95, ../../sass/style.scss */
 .page-controls .page-navigation {
   min-width: 120px;
   text-align: right;
 }
 
-/* line 58, ../../sass/style.scss */
+/* line 101, ../../sass/style.scss */
 .product-table {
   margin: auto;
   text-align: left;
 }
-/* line 62, ../../sass/style.scss */
+/* line 105, ../../sass/style.scss */
 .product-table .price {
   text-align: right;
+}
+/* line 109, ../../sass/style.scss */
+.product-table .product-image {
+  width: 128px;
 }
