--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,37 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700);
+@import url(https://fonts.googleapis.com/css?family=Arvo:400,700);
+@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans+SC);
+
+.splash {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  position: fixed;
+
+  .splash-container {
+    position: relative;
+    transform: translateY(-50%);
+    top: 50%;
+    height: 70px;
+  }
+
+  .splash-text {
+    color: white;
+    width: 100%;
+    text-align: center;
+    font-size: 28px;
+    font-weight: 100;
+  }
+
+  .splash-progress {
+    margin: auto;
+  }
+}
+
+.content {
+  display: none;
+}
 
 a {
   color: black;
@@ -9,12 +41,23 @@ a {
 .header {
   background-color: #8BC34A;
 
-  h1 {
+  h1,h2 {
     text-align: center;
     margin: 0 auto;
-    font-size: 150px;
+  }
+
+  h1 {
+    font-family: 'Alegreya Sans SC', sans-serif;
+    font-size: 128px;
     color: #2C3C2D;
-    font-weight: 500;
+    font-weight: 400;
+  }
+
+  h2 {
+    font-family: 'Arvo', serif;
+    font-size: 32px;
+    color: lighten(#2C3C2D, 10%);
+    font-weight: 300;
   }
 }
 
@@ -61,5 +104,9 @@ a {
 
   .price {
     text-align: right;
+  }
+
+  .product-image {
+    width: 128px;
   }
 }
