--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700);
 @import url(https://fonts.googleapis.com/css?family=Arvo:400,700);
-@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans+SC);
+@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,300,700,500);
 
 $text-primary: black;
 $text-secondary: #777;
@@ -32,11 +32,16 @@ html,body {
   color: $text-primary;
 }
 
+body {
+  overflow: hidden;
+}
+
 .splash {
   width: 100%;
   height: 100%;
   background-color: black;
-  position: fixed;
+  position: absolute;
+  z-index: 10000;
 
   .splash-container {
     position: relative;
@@ -62,9 +67,9 @@ html,body {
   display: none;
 }
 
-a {
-  color: $text-primary;
-  text-decoration: none;
+a,a:hover {
+  color: $text-primary !important;
+  text-decoration: none !important;
 }
 
 .header {
@@ -76,7 +81,7 @@ a {
   }
 
   h1 {
-    font-family: 'Alegreya Sans SC', sans-serif;
+    font-family: "Alegreya Sans SC", sans-serif;
     font-size: 64px;
     color: #2C3C2D;
     font-weight: 400;
@@ -108,6 +113,7 @@ a {
   }
   
   margin: auto;
+  margin-bottom: 50px;
   padding-top: 10px;
 }
 
@@ -122,7 +128,11 @@ a {
       transition: background-color 0.2s linear;
     }
 
-    .page-size,.page-navigation,.page-buttons md-icon {
+    .page-size {
+      display: none;
+    }
+
+    .page-navigation,.page-buttons md-icon {
       color: white;
     }
   }
@@ -171,6 +181,7 @@ a {
 
 .product-table-container {
   margin-top: 64px;
+  border-top: 1px solid #CCC;
 }
 
 .product-table {
@@ -179,11 +190,85 @@ a {
   text-align: left;
   font-weight: 300;
 
-  .price {
-    text-align: right;
-  }
+  .product {
+    background-color: transparent;
+    transition: background-color 0.1s linear;
 
-  .product-image {
-    width: 64px;
+    padding: 20px;
+
+    border-bottom: 1px solid #EEE;
+
+    @include desktop {
+      padding-left: 100px;
+      padding-right: 100px;
+    }
+
+    &:hover {
+      background-color: #CCC;
+    }
+
+    .product-image {
+      width: 64px;
+      border-radius: 12px;
+    }
+
+
+    .product-left {
+
+    }
+
+    .product-center {
+
+    }
+
+    .product-right {
+      text-align: right;
+    }
+
+    .product-name {
+      font-family: "Alegreya Sans SC", sans-serif;
+      font-size: 24px;
+      font-weight: 400;
+    }
+
+    .product-volume {
+      color: #888;
+    }
+
+    .product-price {
+      font-size: 32px;
+      color: black;
+    }
+
+    .product-saved-price {
+      font-size: 12px;
+      color: #8BC34A;
+    }
+
+    .product-original-price {
+      font-size: 12px;
+      color: #777;
+    }
+  }
+}
+
+.footer {
+  height: 50px;
+  background-color: black;
+  color: white;
+
+  .footer-disclaimer {
+    margin: auto;
+    text-align: center;
+    font-size: 10px;
+    width: 50%;
+    position: relative;
+    transform: translateY(-50%);
+    top: 50%;
+
+    @include small {
+      width: 100%;
+      font-size: 8px;
+    }
   }
 }
