--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,67 +112,68 @@ a, a:hover {
 /* line 127, ../../sass/style.scss */
 .page-controls.affix md-toolbar {
   transition: background-color 0.2s linear;
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
-/* line 131, ../../sass/style.scss */
+/* line 132, ../../sass/style.scss */
 .page-controls.affix .page-size {
   display: none;
 }
-/* line 135, ../../sass/style.scss */
+/* line 136, ../../sass/style.scss */
 .page-controls.affix .page-navigation, .page-controls.affix .page-buttons md-icon {
   color: white;
 }
-/* line 140, ../../sass/style.scss */
+/* line 141, ../../sass/style.scss */
 .page-controls:not(.affix) {
   position: absolute;
 }
-/* line 143, ../../sass/style.scss */
+/* line 144, ../../sass/style.scss */
 .page-controls:not(.affix) md-toolbar {
   background-color: transparent;
 }
-/* line 149, ../../sass/style.scss */
+/* line 150, ../../sass/style.scss */
 .page-controls md-toolbar .md-toolbar-tools {
   padding: 0;
 }
-/* line 154, ../../sass/style.scss */
+/* line 155, ../../sass/style.scss */
 .page-controls .page-size, .page-controls .page-navigation, .page-controls .page-buttons {
   text-align: left;
   display: inline-block;
 }
-/* line 159, ../../sass/style.scss */
+/* line 160, ../../sass/style.scss */
 .page-controls .page-size, .page-controls .page-navigation {
   font-size: 14px;
   font-weight: 300;
   color: #777;
 }
-/* line 166, ../../sass/style.scss */
+/* line 167, ../../sass/style.scss */
 .page-controls .page-size md-input-container {
   margin-top: 14px;
 }
-/* line 170, ../../sass/style.scss */
+/* line 171, ../../sass/style.scss */
 .page-controls .page-size span {
   position: relative;
   top: 1px;
 }
-/* line 176, ../../sass/style.scss */
+/* line 177, ../../sass/style.scss */
 .page-controls .page-navigation {
   min-width: 120px;
   text-align: right;
 }
 
-/* line 182, ../../sass/style.scss */
+/* line 183, ../../sass/style.scss */
 .product-table-container {
   margin-top: 64px;
   border-top: 1px solid #CCC;
 }
 
-/* line 187, ../../sass/style.scss */
+/* line 188, ../../sass/style.scss */
 .product-table {
   margin: auto;
   width: 100%;
   text-align: left;
   font-weight: 300;
 }
-/* line 193, ../../sass/style.scss */
+/* line 194, ../../sass/style.scss */
 .product-table .product {
   background-color: transparent;
   transition: background-color 0.1s linear;
@@ -180,58 +181,58 @@ a, a:hover {
   border-bottom: 1px solid #EEE;
 }
 @media (min-width: 1024px) {
-  /* line 193, ../../sass/style.scss */
+  /* line 194, ../../sass/style.scss */
   .product-table .product {
     padding-left: 100px;
     padding-right: 100px;
   }
 }
-/* line 206, ../../sass/style.scss */
+/* line 207, ../../sass/style.scss */
 .product-table .product:hover {
   background-color: #CCC;
 }
-/* line 210, ../../sass/style.scss */
+/* line 211, ../../sass/style.scss */
 .product-table .product .product-image {
   width: 64px;
   border-radius: 12px;
 }
-/* line 224, ../../sass/style.scss */
+/* line 225, ../../sass/style.scss */
 .product-table .product .product-right {
   text-align: right;
 }
-/* line 228, ../../sass/style.scss */
+/* line 229, ../../sass/style.scss */
 .product-table .product .product-name {
   font-family: "Alegreya Sans SC", sans-serif;
   font-size: 24px;
   font-weight: 400;
 }
-/* line 234, ../../sass/style.scss */
+/* line 235, ../../sass/style.scss */
 .product-table .product .product-volume {
   color: #888;
 }
-/* line 238, ../../sass/style.scss */
+/* line 239, ../../sass/style.scss */
 .product-table .product .product-price {
   font-size: 32px;
   color: black;
 }
-/* line 243, ../../sass/style.scss */
+/* line 244, ../../sass/style.scss */
 .product-table .product .product-saved-price {
   font-size: 12px;
   color: #8BC34A;
 }
-/* line 248, ../../sass/style.scss */
+/* line 249, ../../sass/style.scss */
 .product-table .product .product-original-price {
   font-size: 12px;
   color: #777;
 }
 
-/* line 255, ../../sass/style.scss */
+/* line 256, ../../sass/style.scss */
 .footer {
   height: 50px;
   background-color: black;
   color: white;
 }
-/* line 260, ../../sass/style.scss */
+/* line 261, ../../sass/style.scss */
 .footer .footer-disclaimer {
   margin: auto;
   text-align: center;
@@ -242,7 +243,7 @@ a, a:hover {
   top: 50%;
 }
 @media (max-width: 767px) {
-  /* line 260, ../../sass/style.scss */
+  /* line 261, ../../sass/style.scss */
   .footer .footer-disclaimer {
     width: 100%;
     font-size: 8px;
