Add shadow around body, remove shadow from header

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -73,7 +73,7 @@ a,a:hover {
 }
 
 .header {
-  // background-color: #8BC34A;
+  background-color: #8BC34A;
 
   h1,h2 {
     text-align: center;
@@ -114,7 +114,6 @@ a,a:hover {
   
   margin: auto;
   margin-bottom: 50px;
-  padding-top: 10px;
 }
 
 .page-controls {
