--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,239 +2,239 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700);
 @import url(https://fonts.googleapis.com/css?family=Arvo:400,700);
 @import url(https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,300,700,500);
-/* line 30, ../../sass/style.scss */
+/* line 56, ../../sass/style.scss */
 html, body {
   font-family: Roboto,"Helvetica Neue",sans-serif;
-  color: black;
+  color: #212121;
 }
 
-/* line 35, ../../sass/style.scss */
+/* line 61, ../../sass/style.scss */
 body {
   overflow: hidden;
 }
 
-/* line 39, ../../sass/style.scss */
+/* line 65, ../../sass/style.scss */
 .splash {
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: #33691E;
   position: absolute;
   z-index: 10000;
 }
-/* line 46, ../../sass/style.scss */
+/* line 72, ../../sass/style.scss */
 .splash .splash-container {
   position: relative;
   transform: translateY(-50%);
   top: 50%;
   height: 70px;
 }
-/* line 53, ../../sass/style.scss */
+/* line 79, ../../sass/style.scss */
 .splash .splash-text {
-  color: white;
+  color: #F1F8E9;
   width: 100%;
   text-align: center;
   font-size: 28px;
   font-weight: 100;
 }
-/* line 61, ../../sass/style.scss */
+/* line 87, ../../sass/style.scss */
 .splash .splash-progress {
   margin: auto;
 }
 
-/* line 66, ../../sass/style.scss */
+/* line 92, ../../sass/style.scss */
 .content {
   display: none;
 }
 
-/* line 70, ../../sass/style.scss */
+/* line 96, ../../sass/style.scss */
 a, a:hover {
-  color: black !important;
+  color: #212121 !important;
   text-decoration: none !important;
 }
 
-/* line 75, ../../sass/style.scss */
+/* line 101, ../../sass/style.scss */
 .header {
-  background-color: #8BC34A;
+  background-color: #33691E;
 }
-/* line 78, ../../sass/style.scss */
+/* line 104, ../../sass/style.scss */
 .header h1, .header h2 {
   text-align: center;
   margin: 0 auto;
 }
-/* line 83, ../../sass/style.scss */
+/* line 109, ../../sass/style.scss */
 .header h1 {
   font-family: "Alegreya Sans SC", sans-serif;
   font-size: 64px;
-  color: #2C3C2D;
+  color: #F1F8E9;
   font-weight: 400;
 }
 @media (max-width: 767px) {
-  /* line 83, ../../sass/style.scss */
+  /* line 109, ../../sass/style.scss */
   .header h1 {
     font-size: 32px;
   }
 }
-/* line 94, ../../sass/style.scss */
+/* line 120, ../../sass/style.scss */
 .header h2 {
   position: relative;
   font-size: 16px;
   top: -12px;
-  color: #425943;
+  color: #C5E1A5;
   font-weight: 300;
 }
 @media (max-width: 767px) {
-  /* line 94, ../../sass/style.scss */
+  /* line 120, ../../sass/style.scss */
   .header h2 {
     font-size: 12px;
     top: -6px;
   }
 }
 
-/* line 108, ../../sass/style.scss */
+/* line 134, ../../sass/style.scss */
 .products {
   width: 100%;
   margin: auto;
 }
 @media (min-width: 1024px) {
-  /* line 108, ../../sass/style.scss */
+  /* line 134, ../../sass/style.scss */
   .products {
     width: 66%;
   }
 }
 
-/* line 118, ../../sass/style.scss */
+/* line 144, ../../sass/style.scss */
 .page-controls {
   right: 0;
   top: 0;
 }
-/* line 122, ../../sass/style.scss */
+/* line 148, ../../sass/style.scss */
 .page-controls.affix {
   width: 100%;
 }
-/* line 125, ../../sass/style.scss */
+/* line 151, ../../sass/style.scss */
 .page-controls.affix md-toolbar {
   transition: background-color 0.2s linear;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
-/* line 130, ../../sass/style.scss */
+/* line 156, ../../sass/style.scss */
 .page-controls.affix .page-size {
   display: none;
 }
-/* line 134, ../../sass/style.scss */
+/* line 160, ../../sass/style.scss */
 .page-controls.affix .page-navigation, .page-controls.affix .page-buttons md-icon {
-  color: white;
+  color: #F1F8E9;
 }
-/* line 139, ../../sass/style.scss */
+/* line 165, ../../sass/style.scss */
 .page-controls:not(.affix) {
   position: absolute;
 }
-/* line 142, ../../sass/style.scss */
+/* line 168, ../../sass/style.scss */
 .page-controls:not(.affix) md-toolbar {
   background-color: transparent;
 }
-/* line 148, ../../sass/style.scss */
+/* line 174, ../../sass/style.scss */
 .page-controls md-toolbar .md-toolbar-tools {
   padding: 0;
 }
-/* line 153, ../../sass/style.scss */
+/* line 179, ../../sass/style.scss */
 .page-controls .page-size, .page-controls .page-navigation, .page-controls .page-buttons {
   text-align: left;
   display: inline-block;
 }
-/* line 158, ../../sass/style.scss */
+/* line 184, ../../sass/style.scss */
 .page-controls .page-size, .page-controls .page-navigation {
   font-size: 14px;
   font-weight: 300;
-  color: #777;
+  color: #616161;
 }
-/* line 165, ../../sass/style.scss */
+/* line 191, ../../sass/style.scss */
 .page-controls .page-size md-input-container {
   margin-top: 14px;
 }
-/* line 169, ../../sass/style.scss */
+/* line 195, ../../sass/style.scss */
 .page-controls .page-size span {
   position: relative;
   top: 1px;
 }
-/* line 175, ../../sass/style.scss */
+/* line 201, ../../sass/style.scss */
 .page-controls .page-navigation {
   min-width: 120px;
   text-align: right;
 }
 
-/* line 181, ../../sass/style.scss */
+/* line 207, ../../sass/style.scss */
 .product-table-container {
   margin-top: 64px;
-  border-top: 1px solid #CCC;
+  border-top: 1px solid #BDBDBD;
 }
 
-/* line 186, ../../sass/style.scss */
+/* line 212, ../../sass/style.scss */
 .product-table {
   margin: auto;
   width: 100%;
   text-align: left;
   font-weight: 300;
 }
-/* line 192, ../../sass/style.scss */
+/* line 218, ../../sass/style.scss */
 .product-table .product {
   background-color: transparent;
   transition: background-color 0.1s linear;
   padding: 20px;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 1px solid #EEEEEE;
 }
 @media (min-width: 1024px) {
-  /* line 192, ../../sass/style.scss */
+  /* line 218, ../../sass/style.scss */
   .product-table .product {
     padding-left: 100px;
     padding-right: 100px;
   }
 }
-/* line 205, ../../sass/style.scss */
+/* line 231, ../../sass/style.scss */
 .product-table .product:hover {
-  background-color: #CCC;
+  background-color: #CCFF90;
 }
-/* line 209, ../../sass/style.scss */
+/* line 235, ../../sass/style.scss */
 .product-table .product .product-image {
   width: 64px;
   border-radius: 12px;
 }
-/* line 223, ../../sass/style.scss */
+/* line 249, ../../sass/style.scss */
 .product-table .product .product-right {
   text-align: right;
 }
-/* line 227, ../../sass/style.scss */
+/* line 253, ../../sass/style.scss */
 .product-table .product .product-name {
   font-family: "Alegreya Sans SC", sans-serif;
   font-size: 24px;
   font-weight: 400;
 }
-/* line 233, ../../sass/style.scss */
+/* line 259, ../../sass/style.scss */
 .product-table .product .product-volume {
-  color: #888;
+  color: #616161;
 }
-/* line 237, ../../sass/style.scss */
+/* line 263, ../../sass/style.scss */
 .product-table .product .product-price {
   font-size: 32px;
-  color: black;
+  color: #212121;
 }
-/* line 242, ../../sass/style.scss */
+/* line 268, ../../sass/style.scss */
 .product-table .product .product-saved-price {
   font-size: 12px;
-  color: #8BC34A;
+  color: #64DD17;
 }
-/* line 247, ../../sass/style.scss */
+/* line 273, ../../sass/style.scss */
 .product-table .product .product-original-price {
   font-size: 12px;
-  color: #777;
+  color: #616161;
 }
 
-/* line 254, ../../sass/style.scss */
+/* line 280, ../../sass/style.scss */
 .footer {
   height: 50px;
-  background-color: black;
-  color: white;
+  background-color: #33691E;
+  color: #F1F8E9;
 }
-/* line 259, ../../sass/style.scss */
+/* line 285, ../../sass/style.scss */
 .footer .footer-disclaimer {
   margin: auto;
   text-align: center;
@@ -245,7 +245,7 @@ a, a:hover {
   top: 50%;
 }
 @media (max-width: 767px) {
-  /* line 259, ../../sass/style.scss */
+  /* line 285, ../../sass/style.scss */
   .footer .footer-disclaimer {
     width: 100%;
     font-size: 8px;
