Refine styles, add background

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700);
-@import url(https://fonts.googleapis.com/css?family=Arvo:400,700);
 @import url(https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,300,700,500);
+@import url(https://fonts.googleapis.com/css?family=Lobster);
 /* line 56, ../../sass/style.scss */
 html, body {
   font-family: Roboto,"Helvetica Neue",sans-serif;
@@ -44,138 +44,149 @@ body {
 /* line 92, ../../sass/style.scss */
 .content {
   display: none;
+  background-color: #F1F8E9;
 }
 
-/* line 96, ../../sass/style.scss */
+/* line 97, ../../sass/style.scss */
 a, a:hover {
   color: #212121 !important;
   text-decoration: none !important;
 }
 
-/* line 101, ../../sass/style.scss */
+/* line 102, ../../sass/style.scss */
 .header {
-  background-color: #33691E;
+  background-color: #689F38;
 }
-/* line 104, ../../sass/style.scss */
+/* line 105, ../../sass/style.scss */
 .header h1, .header h2 {
   text-align: center;
   margin: 0 auto;
 }
-/* line 109, ../../sass/style.scss */
+/* line 110, ../../sass/style.scss */
 .header h1 {
-  font-family: "Alegreya Sans SC", sans-serif;
+  font-family: 'Lobster', cursive;
   font-size: 64px;
   color: #F1F8E9;
   font-weight: 400;
 }
 @media (max-width: 767px) {
-  /* line 109, ../../sass/style.scss */
+  /* line 110, ../../sass/style.scss */
   .header h1 {
     font-size: 32px;
   }
 }
-/* line 120, ../../sass/style.scss */
+/* line 122, ../../sass/style.scss */
 .header h2 {
   position: relative;
   font-size: 16px;
-  top: -12px;
+  top: -6px;
   color: #C5E1A5;
   font-weight: 300;
 }
 @media (max-width: 767px) {
-  /* line 120, ../../sass/style.scss */
+  /* line 122, ../../sass/style.scss */
   .header h2 {
     font-size: 12px;
     top: -6px;
   }
 }
 
-/* line 134, ../../sass/style.scss */
+/* line 136, ../../sass/style.scss */
 .products {
   width: 100%;
   margin: auto;
 }
 @media (min-width: 1024px) {
-  /* line 134, ../../sass/style.scss */
+  /* line 136, ../../sass/style.scss */
   .products {
     width: 66%;
   }
 }
 
-/* line 144, ../../sass/style.scss */
+/* line 146, ../../sass/style.scss */
 .page-controls {
   right: 0;
   top: 0;
 }
-/* line 148, ../../sass/style.scss */
+/* line 150, ../../sass/style.scss */
 .page-controls.affix {
   width: 100%;
 }
-/* line 151, ../../sass/style.scss */
+/* line 153, ../../sass/style.scss */
 .page-controls.affix md-toolbar {
   transition: background-color 0.2s linear;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
-/* line 156, ../../sass/style.scss */
+/* line 157, ../../sass/style.scss */
+.page-controls.affix md-toolbar .md-toolbar-tools {
+  padding-right: 17%;
+}
+@media (max-width: 767px) {
+  /* line 157, ../../sass/style.scss */
+  .page-controls.affix md-toolbar .md-toolbar-tools {
+    padding-right: 0;
+  }
+}
+/* line 166, ../../sass/style.scss */
 .page-controls.affix .page-size {
   display: none;
 }
-/* line 160, ../../sass/style.scss */
+/* line 170, ../../sass/style.scss */
 .page-controls.affix .page-navigation, .page-controls.affix .page-buttons md-icon {
   color: #F1F8E9;
 }
-/* line 165, ../../sass/style.scss */
+/* line 175, ../../sass/style.scss */
 .page-controls:not(.affix) {
   position: absolute;
 }
-/* line 168, ../../sass/style.scss */
+/* line 178, ../../sass/style.scss */
 .page-controls:not(.affix) md-toolbar {
   background-color: transparent;
 }
-/* line 174, ../../sass/style.scss */
+/* line 184, ../../sass/style.scss */
 .page-controls md-toolbar .md-toolbar-tools {
   padding: 0;
 }
-/* line 179, ../../sass/style.scss */
+/* line 189, ../../sass/style.scss */
 .page-controls .page-size, .page-controls .page-navigation, .page-controls .page-buttons {
   text-align: left;
   display: inline-block;
 }
-/* line 184, ../../sass/style.scss */
+/* line 194, ../../sass/style.scss */
 .page-controls .page-size, .page-controls .page-navigation {
   font-size: 14px;
   font-weight: 300;
   color: #616161;
 }
-/* line 191, ../../sass/style.scss */
+/* line 201, ../../sass/style.scss */
 .page-controls .page-size md-input-container {
   margin-top: 14px;
 }
-/* line 195, ../../sass/style.scss */
+/* line 205, ../../sass/style.scss */
 .page-controls .page-size span {
   position: relative;
   top: 1px;
 }
-/* line 201, ../../sass/style.scss */
+/* line 211, ../../sass/style.scss */
 .page-controls .page-navigation {
   min-width: 120px;
   text-align: right;
 }
 
-/* line 207, ../../sass/style.scss */
+/* line 217, ../../sass/style.scss */
 .product-table-container {
   margin-top: 64px;
   border-top: 1px solid #BDBDBD;
 }
 
-/* line 212, ../../sass/style.scss */
+/* line 222, ../../sass/style.scss */
 .product-table {
   margin: auto;
   width: 100%;
   text-align: left;
   font-weight: 300;
 }
-/* line 218, ../../sass/style.scss */
+/* line 228, ../../sass/style.scss */
 .product-table .product {
   background-color: transparent;
   transition: background-color 0.1s linear;
@@ -183,58 +194,95 @@ a, a:hover {
   border-bottom: 1px solid #EEEEEE;
 }
 @media (min-width: 1024px) {
-  /* line 218, ../../sass/style.scss */
+  /* line 228, ../../sass/style.scss */
   .product-table .product {
     padding-left: 100px;
     padding-right: 100px;
   }
 }
-/* line 231, ../../sass/style.scss */
+/* line 241, ../../sass/style.scss */
 .product-table .product:hover {
   background-color: #CCFF90;
 }
-/* line 235, ../../sass/style.scss */
+/* line 245, ../../sass/style.scss */
 .product-table .product .product-image {
   width: 64px;
   border-radius: 12px;
 }
-/* line 249, ../../sass/style.scss */
+@media (max-width: 767px) {
+  /* line 245, ../../sass/style.scss */
+  .product-table .product .product-image {
+    width: 48px;
+  }
+}
+/* line 263, ../../sass/style.scss */
 .product-table .product .product-right {
   text-align: right;
 }
-/* line 253, ../../sass/style.scss */
+/* line 267, ../../sass/style.scss */
 .product-table .product .product-name {
   font-family: "Alegreya Sans SC", sans-serif;
   font-size: 24px;
   font-weight: 400;
 }
-/* line 259, ../../sass/style.scss */
+@media (max-width: 767px) {
+  /* line 267, ../../sass/style.scss */
+  .product-table .product .product-name {
+    font-size: 18px;
+  }
+}
+/* line 277, ../../sass/style.scss */
 .product-table .product .product-volume {
   color: #616161;
 }
-/* line 263, ../../sass/style.scss */
+@media (max-width: 767px) {
+  /* line 277, ../../sass/style.scss */
+  .product-table .product .product-volume {
+    font-size: 12px;
+  }
+}
+/* line 285, ../../sass/style.scss */
 .product-table .product .product-price {
   font-size: 32px;
   color: #212121;
 }
-/* line 268, ../../sass/style.scss */
+@media (max-width: 767px) {
+  /* line 285, ../../sass/style.scss */
+  .product-table .product .product-price {
+    font-size: 24px;
+  }
+}
+/* line 294, ../../sass/style.scss */
 .product-table .product .product-saved-price {
   font-size: 12px;
   color: #64DD17;
 }
-/* line 273, ../../sass/style.scss */
+@media (max-width: 767px) {
+  /* line 294, ../../sass/style.scss */
+  .product-table .product .product-saved-price {
+    font-size: 10px;
+  }
+}
+/* line 304, ../../sass/style.scss */
 .product-table .product .product-original-price {
   font-size: 12px;
   color: #616161;
 }
+@media (max-width: 767px) {
+  /* line 304, ../../sass/style.scss */
+  .product-table .product .product-original-price {
+    font-size: 10px;
+  }
+}
 
-/* line 280, ../../sass/style.scss */
+/* line 316, ../../sass/style.scss */
 .footer {
   height: 50px;
-  background-color: #33691E;
+  position: relative;
+  background-color: #689F38;
   color: #F1F8E9;
 }
-/* line 285, ../../sass/style.scss */
+/* line 322, ../../sass/style.scss */
 .footer .footer-disclaimer {
   margin: auto;
   text-align: center;
@@ -245,7 +293,7 @@ a, a:hover {
   top: 50%;
 }
 @media (max-width: 767px) {
-  /* line 285, ../../sass/style.scss */
+  /* line 322, ../../sass/style.scss */
   .footer .footer-disclaimer {
     width: 100%;
     font-size: 8px;
