--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700);
-@import url(https://fonts.googleapis.com/css?family=Arvo:400,700);
 @import url(https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,300,700,500);
+@import url(https://fonts.googleapis.com/css?family=Lobster);
 
 $light-green-50: #F1F8E9;
 $light-green-100: #DCEDC8;
@@ -91,6 +91,7 @@ body {
 
 .content {
   display: none;
+  background-color: $light-green-50;
 }
 
 a,a:hover {
@@ -99,7 +100,7 @@ a,a:hover {
 }
 
 .header {
-  background-color: $light-green-900;
+  background-color: $light-green-700;
 
   h1,h2 {
     text-align: center;
@@ -107,7 +108,8 @@ a,a:hover {
   }
 
   h1 {
-    font-family: "Alegreya Sans SC", sans-serif;
+    // font-family: "Alegreya Sans SC", sans-serif;
+    font-family: 'Lobster', cursive;
     font-size: 64px;
     color: $light-green-50;
     font-weight: 400;
@@ -120,7 +122,7 @@ a,a:hover {
   h2 {
     position: relative;
     font-size: 16px;
-    top: -12px;
+    top: -6px;
     color: $light-green-200;
     font-weight: 300;
 
@@ -151,6 +153,14 @@ a,a:hover {
     md-toolbar {
       transition: background-color 0.2s linear;
       box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
+
+      .md-toolbar-tools {
+        padding-right: 17%;
+
+        @include small {
+          padding-right: 0;
+        }
+      }
     }
 
     .page-size {
@@ -235,6 +245,10 @@ a,a:hover {
     .product-image {
       width: 64px;
       border-radius: 12px;
+
+      @include small {
+        width: 48px;
+      }
     }
 
 
@@ -254,32 +268,55 @@ a,a:hover {
       font-family: "Alegreya Sans SC", sans-serif;
       font-size: 24px;
       font-weight: 400;
+
+      @include small {
+        font-size: 18px;
+      }
     }
 
     .product-volume {
       color: $text-secondary;
+
+      @include small {
+        font-size: 12px;
+      }
     }
 
     .product-price {
       font-size: 32px;
       color: $text-primary;
+
+      @include small {
+        font-size: 24px;
+      }
     }
 
     .product-saved-price {
       font-size: 12px;
       color: $light-green-A700;
+
+
+      @include small {
+        font-size: 10px;
+      }
     }
 
     .product-original-price {
       font-size: 12px;
       color: $text-secondary;
+
+
+      @include small {
+        font-size: 10px;
+      }
     }
   }
 }
 
 .footer {
   height: 50px;
-  background-color: $light-green-900;
+  position: relative;
+  background-color: $light-green-700;
   color: $light-green-50;
 
   .footer-disclaimer {
